==> tomkcook/arduino-libraries/TFTLCD/TFTLCD.cpp <==
#include "TFTLCD.h"
 #define DATAPORT1 PORTD
 #define DATAPIN1 PIND
 #define DATADDR1 DDRD
 #define DATAPORT2 PORTB
 #define DATAPIN2 PINB
 #define DATADDR2 DDRB
 #define DATA1_MASK 0xD0
 #define DATA2_MASK 0x2F
 #define DATAPORT1 PORTD
 #define DATAPIN1  PIND
 #define DATADDR1  DDRD
 #define DATAPORT2 PORTB
 #define DATAPIN2  PINB
 #define DATADDR2  DDRB
 #define DATA1_MASK 0xFC  // top 6 bits
 #define DATA2_MASK 0x03  // bottom 2 bits
#include "glcdfont.c"
#include <avr/pgmspace.h>
#include "pins_arduino.h"
#include "wiring_private.h"

void TFTLCD::initDisplay(void) {
  uint16_t a, d;

  reset();
  
  for (uint8_t i = 0; i < sizeof(_regValues) / 4; i++) {
    a = pgm_read_word(_regValues + i*2);
    d = pgm_read_word(_regValues + i*2 + 1);

    if (a == 0xFF) {
      delay(d);
    } else {
      writeRegister(a, d);
      //Serial.print("addr: "); Serial.print(a); 
      //Serial.print(" data: "); Serial.println(d, HEX);
    }
  }
}

void TFTLCD::reset(void) {
  if (_reset)
    digitalWrite(_reset, LOW);
  delay(2); 
  if (_reset)
    digitalWrite(_reset, HIGH);

  delay(500);
  // resync
  writeData(0);
  writeData(0);
  writeData(0);  
  writeData(0);
  delay(500);
}

void TFTLCD::writeData(uint16_t data) {
  CSLO();
  CDHI();
  RDHI();
  WRHI();

  setWriteDir();
  write8(data >> 8);

  WRLO();
  WRHI();

  write8(data);

  WRLO();
  WRHI();

  CSHI();
}
