==> blaezec/stm32f4/stm32f4/serialUSB_fsmc/TFTLCD.c <==
#include "stm32f4xx_conf.h"
#include "stm32f4xx_it.h"
#include "TFTLCD.h"

void initDisplay(void) 
{
    uint16_t a, d;
    uint8_t i;
    rotation = 0;
    _width = TFTWIDTH;
    _height = TFTHEIGHT;


    cursor_y = cursor_x = 0;
    textsize = 1;
    textcolor = 0xFFFF;
    GPIO_SetBits(GPIOE, GPIO_Pin_1);
    delayMillis(2); 
    reset();
  
  
  
  uint16_t identifier = readRegister(0x0);
  printf ("TFTLCD Driver ID: 0x%04X\r\n",identifier);
  if (identifier == 0x9325) 
  {
    printf("Found ILI9325");
  } else if (identifier == 0x9328) {
    printf("Found ILI9328\r\n");
  } else {
    printf("Unknown driver chip\r\n");
    
    return;
  }
    for (i = 0; i < sizeof(_regValues) / 4; i++) {
        a = *(_regValues + i*2);
        d = *(_regValues + i*2 + 1);

        if (a == 0xFF) {
            delayMillis(d);
        } else {
            writeRegister(a, d);
      //printf("addr: %d data: 0x%04X\r\n",a,d); 
      
        }
    }
}

void reset(void) 
{
    GPIO_ResetBits(GPIOE, GPIO_Pin_1);
    // digitalWrite(_reset, LOW);
    delayMillis(2); 
    
    // digitalWrite(_reset, HIGH);
    GPIO_SetBits(GPIOE, GPIO_Pin_1);
    printf("Reset TFT - \n\r");

  // resync
    writeData(0);
    writeData(0);
    writeData(0);  
    writeData(0);
}

void writeData(uint16_t data) 
{
    
    
    // *retvl=(uint8_t)data >> 8;
    // *(retvl+1)=(uint8_t)data;
    *fsmcData=(data >> 8);
    uDelay(0);
    *fsmcData=data;
    // return retvl;
}
